Redirect media url to media cache

--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -34,20 +34,25 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
 
     # Django media
-    #location /media  {
-    #            alias /path/to/your/project/project/media;
-    #}
+    location /media {
+        alias /media;
+        access_log off;
+        log_not_found off;
+        expires 7d
+    }
 
     # Serve favicon
     location = /favicon.ico {
-            alias /static/images/favicon.ico;
-            access_log off;
-            log_not_found off;
+        alias /static/images/favicon.ico;
+        access_log off;
+        log_not_found off;
     }
 
     # Redirect statics to volume.
     location /static {
         alias /static;
+        access_log off;
+        log_not_found off;
         expires 365d;
     }
 
