Fix missing colon

--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -38,7 +38,7 @@ server {
         alias /media;
         access_log off;
         log_not_found off;
-        expires 7d
+        expires 7d;
     }
 
     # Serve favicon
