Default file names for certificate and key

--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -21,8 +21,8 @@ server {
     listen      443 ssl default_server http2;
     listen [::]:443 ssl default_server http2; 
 
-    ssl_certificate pki/braynz_neuromarketingonline_nl.crt;
-    ssl_certificate_key pki/braynz_neuromarketingonline_nl.key;
+    ssl_certificate pki/bundle.crt;
+    ssl_certificate_key pki/secret.key;
 
     server_name _;
 
