--- a/nginx/ssl.conf
+++ b/nginx/ssl.conf
@@ -1,12 +1,12 @@
 # Cipher Suites Settings
-ssl_protocols              TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+ssl_protocols              TLSv1.1 TLSv1.2 TLSv1.3;
 ssl_ciphers                EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH;
 ssl_prefer_server_ciphers  on;
 ssl_ecdh_curve             prime256v1:secp384r1;
 ssl_buffer_size            8k;
 
 # Session Cache
-ssl_session_cache          builtin:1000 shared:SSL:20m;
+ssl_session_cache          builtin:1000 shared:SSL:60m;
 ssl_session_timeout        180m;
 ssl_session_tickets        on;
 
