--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -60,5 +60,7 @@ server {
     location / {
         include     uwsgi_params;
         uwsgi_pass  django;
+        uwsgi_read_timeout 120s;
+        uwsgi_send_timeout 120s;
     }
 }
